--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "webpack --mode=production",
+    "build": "webpack --mode=production",
     "dev": "webpack-dev-server"
   },
   "keywords": [],
@@ -14,8 +14,12 @@
   "devDependencies": {
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "prettier": "2.6.2",
     "terser-webpack-plugin": "^5.3.0",
     "webpack": "^5.63.0",
     "webpack-cli": "^4.9.1",
